Feature #36295, migrate static singletons to Spring beans (#3419)
* Feature #36295: migrate storage layer and core services to Spring DI

Phase 1: migrate FileSystemService, AuthenticationService, SecurityEngine,
and ScheduleServer to @Service beans; add schedule-server Spring Boot module;
update ConfigurationContext.getSpringBean() to fall back to SingletonManager
in non-Spring environments; remove AuthenticationServiceFactory,
SecurityEngineFactory, and DataSpaceFactory; add isWrapperFor/unwrap to
AnalyticRepository.

Phase 2: migrate storage layer to Spring DI; add StorageConfiguration @Bean
factory for KeyValueEngine, BlobEngine, and BlobCache; add
KeyValueStorageManager and BlobStorageManager @Service beans to manage storage
instance pools; migrate DataSpace to @Service with constructor injection;
update KeyValueStorage.Reference and BlobStorage.Reference to delegate to
managers; expand WebConfig @ComponentScan to pick up all migrated service
packages.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Feature #36295: add named daemon thread factories to all ExecutorService instances

Add named daemon ThreadFactory lambdas to all Executors.newXXX() calls so that
process-aot completes without hanging due to non-daemon threads keeping the JVM alive.
Rename TestCluster to MockCluster and move it to the main source set.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Feature #36295: migrate core engines and services to Spring DI

- Add EngineConfiguration with @Bean @Lazy methods for AnalyticRepository,
  XRepository, and ViewsheetService; delete the five legacy AbstractFactoryBean
  factories they replace (AnalyticRepositoryFactory, AssetRepositoryFactory,
  XRepositoryFactory, ViewsheetEngineFactory, ScheduleManagerFactory)
- Migrate ScheduleManager to @Service @Lazy with @Autowired(SecurityEngine)
  constructor and @PostConstruct initInternalTasks(); Reference.get() path
  unchanged for non-Spring environments
- Add static getInstance()/